--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
   <body>
     <% if user_signed_in? %>
       <%= link_to t('views.books.show'),books_path %>
-      <%= link_to 'ユーザー一覧', users_list_path %>
-      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+      <%= link_to t('views.common.Users'), users_path %>
+      <%= link_to t('views.common.Log out'), destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to 'ログイン', new_user_session_path %>
-      <%= link_to 'サインアップ', new_user_registration_path %>
+      <%= link_to t('views.common.Log in'), new_user_session_path %>
+      <%= link_to t('views.common.Sign up'), new_user_registration_path %>
     <% end %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
