--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,25 @@
-<h2>プロフィール</h2>
+<h2><%= t('views.common.show') %></h2>
 
 <p>
   <strong><%= User.human_attribute_name(:email) %>:</strong>
-  <%= current_user.email %>
+  <%= @user.email %>
 </p>
 
 <p>
   <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
-  <%= current_user.postal_code %>
+  <%= @user.postal_code %>
 </p>
 
 <p>
   <strong><%= User.human_attribute_name(:address) %>:</strong>
-  <%= current_user.address %>
+  <%= @user.address %>
 </p>
 
 <p>
   <strong><%= User.human_attribute_name(:profile) %>:</strong>
-  <%= current_user.profile %>
+  <%= @user.profile %>
 </p>
 
-<%= link_to t('views.common.edit'), users_edit_path %>
+<% if @user == current_user %>
+<%= link_to t('views.common.edit'), edit_user_registration_path %>
+<% end %>
