ActiveRecordモデルで翻訳を行う準備（上手く行っていない）

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong><%= t('Title') %>:</strong>
+  <strong><%= Title.model_name.human %>:</strong>
   <%= @book.title %>
 </p>
 
