--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -17,17 +17,17 @@
   </div>
 
   <div class="field">
-    <%= form.label :memo, t('Memo') %>
+    <%= form.label :memo, t('memo') %>
     <%= form.text_area :memo %>
   </div>
 
   <div class="field">
-    <%= form.label :author, t('Author') %>
+    <%= form.label :author, t('author') %>
     <%= form.text_field :author %>
   </div>
 
   <div class="field">
-    <%= form.label :picture, t('Picture') %>
+    <%= form.label :picture, t('picture') %>
     <%= form.file_field :picture %>
   </div>
 
