--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,6 +23,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+
+  <div class="field">
+    <%= f.file_field :avatar %><br>
+  </div>
+
   <div class="actions">
     <%= f.submit t('.sign_up') %>
   </div>
