--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
       <th><%= User.human_attribute_name(:name) %></th>
       <th><%= User.human_attribute_name(:postal_code) %></th>
       <th><%= User.human_attribute_name(:address) %></th>
-      <th></th>
+      <th><%= User.human_attribute_name(:avatar) %></th>
     </tr>
   </thead>
 
@@ -18,6 +18,9 @@
         <td><%= user.name %></td>
         <td><%= user.postal_code %></td>
         <td><%= user.address %></td>
+        <td><% if user.avatar.attached? %>
+          <%= image_tag user.avatar, size: '50x50' %>
+        </td><% end %>
         <td><%= link_to t('views.common.show'), user %></td>
       </tr>
     <% end %>
