ユーザーフォロー機能の追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,39 @@
   <%= @user.name %>
 </p>
 
+<% if current_user != @user %>
+  <% if current_user.following?(@user) %>
+    <%= form_for(current_user.active_follow_relationships.find_by(followed_id: @user.id),
+              url: follow_relationships_url,
+              html: { method: :delete },
+              remote: true) do |f| %>
+      <%= hidden_field_tag :followed_id, @user.id %>
+      <%= f.submit FollowRelationship.human_attribute_name(:unfollow), class: "btn" %>
+    <% end %>
+  <% else %>
+    <%= form_for(current_user.active_follow_relationships.build,
+                url: follow_relationships_url,
+                remote: true) do |f| %>
+      <%= hidden_field_tag :followed_id, @user.id %>
+      <%= f.submit FollowRelationship.human_attribute_name(:follow), class: "btn btn-primary" %>
+    <% end %>
+  <% end %>
+<% end %>
+
+<p>
+  <a href="<%= following_user_path(@user) %>">
+    <strong><%= FollowRelationship.human_attribute_name(:following) %>:</strong>
+    <%= @user.followings.count %>
+  </a>
+</p>
+
+<p>
+  <a href="<%= followers_user_path(@user) %>">
+    <strong><%= FollowRelationship.human_attribute_name(:followers) %>:</strong>
+    <%= @user.followers.count %>
+  </a>
+</p>
+
 <p>
   <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
   <%= @user.postal_code %>
