form_withに置き換え、urlを渡す

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,16 +12,14 @@
 
 <% if current_user != @user %>
   <% if current_user.following?(@user) %>
-    <%= form_for(current_user.active_follow_relationships.find_by(followed_id: @user.id),
-              url: follow_relationships_url,
+    <%= form_with(url: follow_relationships_url,
               html: { method: :delete },
               remote: true) do |f| %>
       <%= hidden_field_tag :followed_id, @user.id %>
       <%= f.submit FollowRelationship.human_attribute_name(:unfollow), class: "btn" %>
     <% end %>
   <% else %>
-    <%= form_for(current_user.active_follow_relationships.build,
-                url: follow_relationships_url,
+    <%= form_with(url: follow_relationships_url,
                 remote: true) do |f| %>
       <%= hidden_field_tag :followed_id, @user.id %>
       <%= f.submit FollowRelationship.human_attribute_name(:follow), class: "btn btn-primary" %>
