--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,27 +16,27 @@
               html: { method: :delete },
               remote: true) do |f| %>
       <%= hidden_field_tag :followed_id, @user.id %>
-      <%= f.submit FollowRelationship.human_attribute_name(:unfollow), class: "btn" %>
+      <%= f.submit t('followrelationship.unfollow'), class: "btn" %>
     <% end %>
   <% else %>
     <%= form_with(url: follow_relationships_url,
                 remote: true) do |f| %>
       <%= hidden_field_tag :followed_id, @user.id %>
-      <%= f.submit FollowRelationship.human_attribute_name(:follow), class: "btn btn-primary" %>
+      <%= f.submit t('followrelationship.follow'), class: "btn btn-primary" %>
     <% end %>
   <% end %>
 <% end %>
 
 <p>
   <a href="<%= user_followings_path(@user) %>">
-    <strong><%= FollowRelationship.human_attribute_name(:following) %>:</strong>
+    <strong><%= t('followrelationship.followings') %>:</strong>
     <%= @user.followings.count %>
   </a>
 </p>
 
 <p>
   <a href="<%= user_followers_path(@user) %>">
-    <strong><%= FollowRelationship.human_attribute_name(:followers) %>:</strong>
+    <strong><%= t('followrelationship.followers') %>:</strong>
     <%= @user.followers.count %>
   </a>
 </p>
